2019-06-30 (v4.7.0):
- Added chatbot v1.0.0.
- Added chatbot library.
- Moved Toggle class to moderation package.

2019-06-30 (v4.6.1):
- Updated .gitignore to save old Servant versions.
- Fixed typo in README.
- Fixed typo in MediaOnlyChannel class.
- Toggle all is now available.

2019-06-29 (v4.6.0):
- Added BaguetteCommand.

2019-06-29 (v4.5.1):
- Sorted help message.
- Sorted features in about message.
- Renamed StealAvatarCommand to AvatarCommand.
- Renamed GuildSettingsCommand to GuildCommand.
- Renamed UserSettingsCommand to UserCommand.

2019-06-29 (v4.5.0):
- Updated README.
- Renamed FileOnlyChannel to MediaOnlyChannel.
- MediaOnlyChannels now allow images, videos, audio files, youtube videos, soundcloud urls and links to images or videos (direct link only).
- On setting up MediaOnlyChannels, the channel description will no longer be changed.
- Any feature except bot owners and JDA utilties standard ones can be toggled.
- Default toggle values are in the toggle.ini file.
- Guilds can now set a custom timezone offset. (from UTC)
- Servant now checks database connection on boot.
- Any command has a detailed help on using that command without any arguments.

2019-06-11 (v4.4.0):
- Added Member Join / Leave Notifications.
- Added database structure.

2019-06-09 (v4.3.1):
- Fixed level formula.
- Added toggle command. (Only level feature yet -> Default: off)

2019-06-07 (v4.3.0):
- Added "StealAvatar"-command.
- Added coin flip command.
- Added feature counters for future statistics (user and guild).
- Added level feature. (LevelCommand, related db tables, LevelListener)
- Added autorole feature. ((Un)setting role, automatically receiving role)
- Added file only channel feature. (Set up channels in which users only can post links and files)

2019-06-04 (v4.2.0):
- Added "AddGif"-command for easy interaction gif management.
- Added clear command to delete messages.
- Removed command editing cooldown.

2019-06-04 (v4.1.0):